base/backapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
spec:
  replicas: 1
  selector: 
    matchLabels: 
      homework: backapp
  template:
    metadata: 
      labels:
        homework: backapp
    spec:
      containers:
      - name: backapp
        image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
        ports:
        - containerPort: 8080
