base/frontapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    homework: frontapp
spec:
  replicas: 1
  selector: 
    matchLabels: 
      homework: frontapp
  template:
    metadata: 
      labels:
        homework: frontapp
    spec:
      containers:
      - name: frontapp
        image: quay.io/drsylent/cubix/block3/homework-frontapp:springboot3
        ports:
        - containerPort: 8080
