base/backapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp-service
  labels:
    homework: backapp
spec:
  selector:
    homework: backapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
