base/frontapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp-service
  labels:
    homework: frontapp
spec:
  selector:
    homework: frontapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
