base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-base
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
